<resources>
    <string name="app_name">PMDM04</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="imagen_usuario">Imagen de cliente1</string>
    <string name="imagen_admin">Imagen de admin</string>
    <string name="compras_realizadas">Ver compras realizadas</string>
    <string name="datos_admin">NomeB Apelido1B Apelido2B</string>
    <string name="datos_cliente">NomeA Apelido1A Apelido2A</string>
    <string name="facer_pedido">Facer pedido</string>
    <string name="pedidos_tramite">Ver pedidos en trámite</string>
    <string name="logout">Saír</string>
    <string name="seguinte">Seguinte</string>
    <string name="Seleccione_categoría">"Seleccione categoría"</string>
    <string name="Seleccione_producto">"Seleccione producto"</string>
    <string name="Seleccione_cantidad">"Seleccione cantidad"</string>
    <string name="finalizar_pedido">"Finalice su pedido"</string>
    <string name="direccion">Dirección :</string>
    <string name="ciudad">Ciudad :</string>
    <string name="codigo_postal">Código postal :</string>
    <string name="cambio_datos">Modificación de datos</string>

    <!-- pantalla inicio-->
    <string name="ingrese_contrasinal">Ingrese contrasinal</string>
    <string name="ingrese_usuario">Ingrese nome do usuario</string>
    <string name="login_admin">Login como administrador</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="contrasinal">Contrasinal</string>
    <string name="rexistrarse">Rexistrarse</string>
    <!-- pantalla rexistro-->
    <string name="nome">Nome</string>
    <string name="apelidos">Apelidos</string>
    <string name="email">Email</string>
    <string name="administrador">Administrador</string>
    <string name="agregar_foto">Agregar foto</string>
    <string name="obter_imaxe">Obter imaxe</string>
    <string name="src_tarxeta">Subir dende a tarxeta</string>
    <string name="src_camara">Subir dende a cámara</string>
    <string name="repetir_contrasinal">Repita Contrasinal</string>
    <!-- pantalla pedidos en trámite-->
    <string name="listado_tramite">Listado pedidos en trámite</string>
    <!-- pantalla administrador-->
    <string name="pedidos_aceptados">Ver pedidos aceptados</string>
    <string name="pedidos_rexeitados">Ver pedidos rexeitados</string>
    <!-- pantalla aceptar pedidos administrador-->
    <string name="aceptar_pedido">Aceptar</string>
    <string name="rexeitar_pedido">Rexeitar</string>

    <!--botón atrás-->
    <string name="atras">Atrás</string>

</resources>
