<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7648DAF"
    tools:context=".Cliente1Panel">

    <include
        android:id="@+id/cliente_layout_toolbar"
        layout="@layout/menu_cliente"/>

    <LinearLayout
        android:id="@+id/datosusuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/botones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fotoUsuario"
            android:layout_width="match_parent"
            android:layout_height="177dp"
            android:contentDescription="@string/imagen_usuario"
            android:cropToPadding="false"
            app:srcCompat="@drawable/imagenuser" />

        <TextView
            android:id="@+id/datosCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/datos_cliente"
            android:textColor="#FFFFFF"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datosusuario">

        <Button
            android:id="@+id/cambioDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="modificarDatos"
            android:text="@string/cambio_datos" />

        <Button
            android:id="@+id/facerPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="hacerPedidos"
            android:text="@string/facer_pedido" />

        <Button
            android:id="@+id/pedidos_tramite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="verPedidos"
            android:text="@string/pedidos_tramite" />

        <Button
            android:id="@+id/compras_realizadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mostrarHistóricoCompras"
            android:text="@string/compras_realizadas" />

        <Button
            android:id="@+id/sair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="salir"
            android:text="@string/logout" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>