<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7648DAF"
    tools:context=".Rexistro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_rexistro"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:foregroundGravity="center"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:cropToPadding="false"
                android:layout_marginBottom="18sp"
                app:srcCompat="@drawable/senimaxe" />

            <TextView
                android:id="@+id/nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome" />

            <EditText
                android:id="@+id/nomeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/apelidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apelidos" />

            <EditText
                android:id="@+id/apelidosText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usuario" />

            <EditText
                android:id="@+id/usuarioText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/contrasinal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contrasinal" />

            <EditText
                android:id="@+id/contrasinalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/contrasinalRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repetir_contrasinal" />

            <EditText
                android:id="@+id/contrasinalRepeatText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/Imagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/obter_imaxe" />

            <RadioGroup
                android:id="@+id/seleccion_imaxe_src"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/tarxeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="controlFonteImaxe"
                    android:text="@string/src_tarxeta"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/camara"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="controlFonteImaxe"
                    android:text="@string/src_camara"
                    android:textSize="12sp" />

            </RadioGroup>

            <Button
                android:id="@+id/engadir_foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="subirImaxe"
                android:text="@string/agregar_foto" />

            <RadioGroup
                android:id="@+id/seleccion_tipo_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18sp">

                <RadioButton
                    android:id="@+id/tipo_cliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="controlSeleccionTipoUsuario"
                    android:text="@string/usuario"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/tipo_admin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="controlSeleccionTipoUsuario"
                    android:text="@string/administrador"
                    android:textSize="12sp" />

            </RadioGroup>


            <Button
                android:id="@+id/registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="rexistrar"
                android:layout_marginBottom="8dp"
                android:text="@string/rexistrarse" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>