<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7648DAF"
    tools:context=".AdminPanel">

    <LinearLayout
        android:id="@+id/datosusuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00FFFFFF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fotoUsuario"
            android:layout_width="match_parent"
            android:layout_height="177dp"
            android:contentDescription="@string/imagen_admin"
            android:cropToPadding="false"
            app:srcCompat="@drawable/imagenadmin" />

        <TextView
            android:id="@+id/datosCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/datos_admin"
            android:textColor="#FFFFFF"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datosusuario">


        <Button
            android:id="@+id/pedidos_tramite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="verPedidosTramite"
            android:text="@string/pedidos_tramite" />

        <Button
            android:id="@+id/pedidos_aceptados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="verPedidosAceptados"
            android:text="@string/pedidos_aceptados" />

        <Button
            android:id="@+id/pedidos_rexeitados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="verPedidosRexeitados"
            android:text="@string/pedidos_rexeitados" />

        <Button
            android:id="@+id/sair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="salir"
            android:text="@string/logout" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>